FIX popover transition's z-index

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -61,7 +61,7 @@ button > .button-icon {
 }
 
 .hiddenImg {
-  display: none;
+  visibility: hidden;
 }
 
 .preview {
