--- a/src/css/Popover.css
+++ b/src/css/Popover.css
@@ -7,7 +7,7 @@
   top: 35px;
   font-size: 0.7em;
   opacity: 0;
-  transition: all 0.3s;
+  transition: opacity 0.3s ease, z-index 0.3s ease;
   box-shadow: 1px 1px 6px #000000;
   z-index: 0;
 }
@@ -24,7 +24,7 @@
 
 .popover-active {
   opacity: 1;
-  z-index: 1;
+  z-index: 10;
 }
 
 .popover input {
